--- a/assets/html/Lev1_3.html
+++ b/assets/html/Lev1_3.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/Lev1_3.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="assets/html/Lev1_2.html">Lev1_2</a>
-    <a href="assets/html/Lev1_2_2.html">Lev1_2_2</a>
-    <a href="assets/html/Lev1_3.html">Lev1_3</a>
+    <header class="box1">Header</header>
+    <main class="box2">Main Content</main>
+    <aside class="box3">Sidebar</aside>
+    <footer class="box4">Footer</footer>
 </body>
 </html>
